# fibernet

./: .gitignore  ANALYSIS_GENERATORS.md  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CODE_CHANGE_SUMMARY.md  CODE_OF_CONDUCT.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  FiberNet_Status_Report_2026-07-05.md  GOAL.md  LICENSE  MANIFEST.in  PERFORMANCE_FIX.md  PROGRESS.md  PROGRESS_SUMMARY.md  README.md  README_CN.md  README_UPDATE_PLAN.md  README_v4_DRAFT.md  SKILL.md  SKILL_STANDARDS.md  deep_analysis.py  fibernet.bundle  generate_core_gallery.py  generate_gallery.py  generate_showcase.py  pyproject.toml  requirements-dev.txt  setup.py  show_diff.py  sync_notebook.sh  test_generators_comprehensive.py  test_intermediate_points.py  test_readme_blocks.json
.git_broken/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git_broken/logs/: HEAD
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
_old_scripts/: ANALYSIS.md  FINAL_SUMMARY.md  SHOWCASE.md  SKILL.md  comprehensive_analysis.py  generate_category_viz.py  generate_showcase_fast.py  generate_showcase_final.py  generate_viz.py
_scripts_archive/: generate_comprehensive_viz.py  generate_showcase.py  generate_showcase_v2.py  test_all_generators.py
analysis_results/: ANALYSIS_GENERATORS_v2.md  checkpoint.json  diag_full.json  feature_matrix.npy  feature_names.json  graph_data_all.json  phase1_structural_diversity.json  phase2_weld_analysis.json  phase3_features.json  phase4_mechanics.json  phase5_ml.json  phase6_rl.json  test_results_v2.json
analysis_scripts/: API_ANALYSIS.md  API_DESIGN.md  FENICS_ANALYSIS_v2.md  GENERATION_PARADIGM_v2.md  VISUALIZATION_ANALYSIS_v2.md  analysis_output.txt  api_demo_and_swastika.py  fenics_feasibility_analysis.md  generate_fem_scenarios.py  generate_showcase_v3.py  generate_sim_viz.py  generation_paradigm_analysis.md  ml_predict_force.py  paradigm_v2_demo.py  pattern_engine_unified.py  pipeline_voronoi_100.py  rl_optimize.py  test_connectivity.py  visualization_analysis.md  viz_comprehensive.py
analysis_scripts/_archive/: generate_sim_viz_v2.py  generation_paradigm_demo.py
benchmarks/: _archive_phase5_fem_rebuild_v1.py  benchmark_generators.py  benchmark_mechanical.py  phase1_api_correctness.py  phase2_final.py  phase2_improved.py  phase2_synthetic_pipeline.py  phase3_complexity_scaling.py  phase4_5_integration.py  phase5_beam_fem.py  phase5_beam_fem_large_scale.py  phase5_fem_integration.py  phase5_fem_rebuild_v2.py  phase5_large_deformation_test.py  phase6_comprehensive_fem_test.py  phase6_fem_diagnostic.py  phase6_fix_and_visualize.py  phase6_v6_validation.py  phase6_validation.py  phase6b_proper_fem_test.py  phase6b_visualize.py
benchmarks/results/: phase1_checkpoint.json  phase1_results.json  phase2_final_results.json  phase2_improved_log.txt  phase2_improved_results.json  phase2_log.txt  phase2_results.json  phase2b_graph_analysis.json  phase3_complexity_scaling.json  phase4_5_integration.json  phase5_fem_integration.json  phase5_fem_rebuild_v2_results.json  phase6_checkpoint.json  phase6_comprehensive_results.json  phase6_diagnostic.json  phase6_v6_validation.json  phase6b_results.json
datasets/: test_ckpt.json
datasets/test_dataset/: dataset.json  feature_names.json  features.npy  label_names.json  labels.npy  unit_types.json
docs/: changelog.rst  conf.py  contributing.rst  fem_implementation.md  getting_started.rst  index.html  index.rst  quickstart.rst  tutorials.rst
docs/api/: index.rst
docs/source/: changelog.rst  conf.py  (+4 more)
examples/: 01_mechanical_analysis.py  02_structure_comparison.py  03_thermal_analysis.py  04_buckling_analysis.py  05_chiral_braided_structures.py  06_uncertainty_quantification.py  07_electromagnetic_analysis.py  08_fatigue_analysis.py  09_creep_analysis.py  10_diffusion_transport.py  11_parameter_sweep.py  12_topology_analysis.py  13_publication_workflow.py  14_advanced_analysis.py  15_ml_property_prediction.py  16_fiber_bundles.py  17_composite_laminates.py  18_pyvista_visualization.py  19_optimization.py  README.md  __init__.py  advanced_generators.py  comprehensive_demo.py  full_workflow.py  integration_examples.py  ml_example.py  nonlinear_mechanics.py  research_case_study.py  transformations.py  tutorial_complete.ipynb
fibernet/: __init__.py  api.py  doe.py  easy.py  materials.py  pyvista_viz.py  trimesh_integration.py  units.py  version.py  visualization.py
output_data/: _pipeline_checkpoint.json  voronoi_100_results.csv
scripts/: build_wiki_html.py  fem_showcase.py  gen_notebook.py  generate_3d_viz.py  generate_readme.py  push_github.sh  run_tutorial_viz.py  run_tutorial_viz_v10.py  run_tutorial_viz_v6.py  run_tutorial_viz_v7.py  run_tutorial_viz_v8.py  run_tutorial_viz_v9.py  test_tutorial_enhanced.py  verify_readme.py
tests/: conftest.py  test_3d_units.py  test_accelerated.py  test_acoustic.py  test_advanced_ml_rl.py  test_api.py  test_benchmark.py  test_comparison.py  test_config.py  test_copy.py  test_core.py  test_coupled.py  test_crosslinks.py  test_cte.py  test_doe.py  test_dynamics.py  test_effective_properties.py  test_generators.py  test_gnn.py  test_graph_api.py  test_graph_neural_network.py  test_integration.py  test_materials.py  test_mesh_export.py  test_ml.py  test_ml_rl_utils.py  test_multiscale.py  test_pandas_io.py  test_percolation.py  test_pyvista.py  test_specialized.py  test_stress_strain.py  test_taichi_fem.py  test_units.py  test_validation.py  test_visualization.py
tutorials/: 01_getting_started.ipynb  02_mechanical_simulation.ipynb  03_machine_learning.ipynb  04_reinforcement_validation.ipynb  05_complete_pipeline_rl_validation.ipynb  06_graph_api_workflow.ipynb  fibernet_v4_tutorial_updated.ipynb  metamaterial_design.ipynb  run_pipeline.py
(+516 files in other folders)
