[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fibernet"
version = "1.0.0"
description = "A comprehensive fiber network generation and simulation toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["pyvista>=0.37"]
io = ["h5py>=3.7"]
accel = ["taichi>=1.6"]
ml = ["scikit-learn>=1.0", "tqdm>=4.60"]
graph = ["networkx>=3.0"]
full = [
    "pyvista>=0.37",
    "h5py>=3.7",
    "taichi>=1.6",
    "scikit-learn>=1.0",
    "networkx>=3.0",
    "tqdm>=4.60",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
