[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fibernet"
version = "1.14.0"
description = "A comprehensive fiber network generation and simulation toolkit for materials science research"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "FiberNet Contributors"}
]
keywords = [
    "fiber networks",
    "materials science",
    "finite element method",
    "simulation",
    "mechanical properties",
    "computational materials",
    "polymer physics",
    "biomechanics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["pyvista>=0.37", "matplotlib>=3.5"]
io = ["h5py>=3.7"]
accel = ["taichi>=1.6"]
ml = ["scikit-learn>=1.0", "tqdm>=4.60"]
graph = ["networkx>=3.0"]
full = [
    "pyvista>=0.37",
    "matplotlib>=3.5",
    "h5py>=3.7",
    "taichi>=1.6",
    "scikit-learn>=1.0",
    "networkx>=3.0",
    "tqdm>=4.60",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "black>=23.0",
    "flake8>=6.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx>=0.9",
]

[project.urls]
Homepage = "https://github.com/GellmanSparrowS/fibernet"
Documentation = "https://fibernet.readthedocs.io"
Repository = "https://github.com/GellmanSparrowS/fibernet"
Issues = "https://github.com/GellmanSparrowS/fibernet/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.packages.find]
include = ["fibernet*"]
